# brabantse-delta-capstone-frontend

./: README.md  pyproject.toml
src/: app.py
src/assets/: main.css
src/data/: pred_df_20231218-114140_randomforest_14.xlsx  rucphen_precipitation_clean.parquet  scaler.pkl
src/pages/: History_panel.py  Home.py  Prediction.py  Prediction_panel.py  svm.py
