[tool.poetry]
name = "brabant-water-capstone-frontend"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
dash = "^2.14.2"
pandas = "^2.1.3"
pyarrow = "^14.0.1"
fastparquet = "^2023.10.1"
dash-bootstrap-components = "^1.5.0"
openpyxl = "^3.1.2"
scikit-learn = "^1.3.2"
dash-mantine-components = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
