[tool.poetry]
name = "brabantse-delta-capstone-frontend"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
dash = "^2.14.2"
pandas = "^2.1.3"
dash-bootstrap-components = "^1.5.0"
openpyxl = "^3.1.2"
dash-mantine-components = "^0.12.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
